--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ h1 {
   opacity: 0;
   cursor: zoom-in;
   transition: transform 0.4s, box-shadow 0.4s, opacity 0.5s;
+  display: block;
 }
 
 #animalImage.show {
@@ -156,3 +157,4 @@ button.active {
   display: none;
   border-radius: 20px;
 }
+
